[package]
name = "parallel-stream"
version = "2.1.2"
license = "MIT OR Apache-2.0"
repository = "https://github.com/async-rs/parallel-stream"
documentation = "https://docs.rs/parallel-stream"
description = "Data parallelism library for async-std"
readme = "README.md"
edition = "2018"
keywords = []
categories = []
authors = [
    "Yoshua Wuyts <yoshuawuyts@gmail.com>"
]

[features]

[dependencies]
async-std = { version = "1.9.0", features = ["attributes", "unstable"] }
pin-project-lite = "0.2.0"

[dev-dependencies]
